--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Mis Metas 2026",
-  "short_name": "Metas 2026",
+  "short_name": "Mis Metas 2026",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#f1f5f9",
